updated humor for data collection in habitat

--- a/configs/gen_data_in_env.cfg
+++ b/configs/gen_data_in_env.cfg
@@ -6,6 +6,7 @@
 --data-steps-out 1
 --data-rot-rep mat
 --data-return-config smpl+joints+contacts
+--test-on-val
 
 --model HumorModel
 --model-data-config smpl+joints+contacts
@@ -16,7 +17,7 @@
 
 --loss HumorLoss
 
---out ./out/humor_test_sampling
+--out ../habitat_data
 --ckpt ./checkpoints/humor/best_model.pth
 --gpu 0
 --batch-size 1
@@ -25,4 +26,3 @@
 --eval-sampling-len 10.0
 --eval-num-samples 1
 --shuffle-test
---write-obj
