minor updates for data generation

--- a/configs/gen_data_in_env.cfg
+++ b/configs/gen_data_in_env.cfg
@@ -6,7 +6,7 @@
 --data-steps-out 1
 --data-rot-rep mat
 --data-return-config smpl+joints+contacts
---test-on-val
+--test-on-train
 
 --model HumorModel
 --model-data-config smpl+joints+contacts
@@ -17,7 +17,7 @@
 
 --loss HumorLoss
 
---out ../habitat_data
+--out /orion/group/Exoskeleton
 --ckpt ./checkpoints/humor/best_model.pth
 --gpu 0
 --batch-size 1
