now use humor_qual for better qualitative and less penetration. removed floor when checking for collision. also added a new dataset class that mapped 22 joints to 10.

--- a/configs/gen_data_in_env.cfg
+++ b/configs/gen_data_in_env.cfg
@@ -15,10 +15,12 @@
 --latent-size 48
 --model-steps-in 1
 
+--model-use-smpl-joint-inputs
+
 --loss HumorLoss
 
---out /orion/group/Exoskeleton
---ckpt ./checkpoints/humor/best_model.pth
+--out /orion/group/Exoskeleton_map10
+--ckpt ./checkpoints/humor_qual/best_model.pth
 --gpu 0
 --batch-size 1
 
