--- a/configs/gen_data_in_env_test.cfg
+++ b/configs/gen_data_in_env_test.cfg
@@ -15,10 +15,12 @@
 --latent-size 48
 --model-steps-in 1
 
+--model-use-smpl-joint-inputs
+
 --loss HumorLoss
 
 --out ../habitat_data_test
---ckpt ./checkpoints/humor/best_model.pth
+--ckpt ./checkpoints/humor_qual/best_model.pth
 --gpu 0
 --batch-size 1
 
