--- a/configs/train_humor_public.cfg
+++ b/configs/train_humor_public.cfg
@@ -6,17 +6,15 @@
 --data-steps-out 1
 --data-rot-rep mat
 --data-return-config smpl+joints+contacts
---data-noise-std 0.0
 
---model MotionvaeModel
+--model HumorModel
 --model-data-config smpl+joints+contacts
 --in-rot-rep mat
 --out-rot-rep aa
 --latent-size 48
 --model-steps-in 1
---model-steps-out 1
 
---loss MotionvaeLoss
+--loss HumorLoss
 --kl-loss 0.0004
 --kl-loss-anneal-start 0
 --kl-loss-anneal-end 50
@@ -40,11 +38,9 @@
 --smpl-mesh-loss 1.0
 --smpl-joint-consistency-loss 1.0
 
---smpl-batch-size 480
-
---out ./out/humor_train_gimo
+--out ./out/humor_train
 --gpu 0
---batch-size 48
+--batch-size 200
 --epochs 200
 --lr 1e-4
 --sched-milestones 50 80 140
