--- a/configs/train_humor_qual_public.cfg
+++ b/configs/train_humor_qual_public.cfg
@@ -1,28 +1,27 @@
 --dataset AmassDiscreteDataset
---data-paths /scr-ssd/bxpan/gimo_processed/
+--data-paths ./data/amass_processed
 --split-by dataset
 --sample-num-frames 10
 --data-steps-in 1
 --data-steps-out 1
 --data-rot-rep mat
 --data-return-config smpl+joints+contacts
---data-noise-std 0.0
 
---model MotionvaeModel
+--model HumorModel
 --model-data-config smpl+joints+contacts
 --in-rot-rep mat
 --out-rot-rep aa
 --latent-size 48
 --model-steps-in 1
---model-steps-out 1
 
---loss MotionvaeLoss
+--model-use-smpl-joint-inputs
+
+--loss HumorLoss
 --kl-loss 0.0004
 --kl-loss-anneal-start 0
 --kl-loss-anneal-end 50
 
 --contacts-loss 0.01
---contacts-vel-loss 0.01
 
 --regr-trans-loss 1.0
 --regr-trans-vel-loss 1.0
@@ -40,11 +39,9 @@
 --smpl-mesh-loss 1.0
 --smpl-joint-consistency-loss 1.0
 
---smpl-batch-size 480
-
---out ./out/humor_train_gimo
+--out ./out/humor_qual_train
 --gpu 0
---batch-size 48
+--batch-size 200
 --epochs 200
 --lr 1e-4
 --sched-milestones 50 80 140
