--- a/configs/test_humor_qual_sampling.cfg
+++ b/configs/test_humor_qual_sampling.cfg
@@ -1,5 +1,5 @@
 --dataset AmassDiscreteDataset
---data-paths ./data/amass_processed
+--data-paths /scr-ssd/bxpan/gimo_processed
 --split-by dataset
 --sample-num-frames 10
 --data-steps-in 1
@@ -19,7 +19,7 @@
 --loss HumorLoss
 
 --out ./out/humor_qual_test_sampling
---ckpt ./checkpoints/humor_qual/best_model.pth
+--ckpt ./out/humor_qual_train_gimo/checkpoints/best_model.pth
 --gpu 0
 --batch-size 1
 
