finished rollout humor from 1 step GIMO input, in humor frame

--- a/configs/gen_data_in_env.cfg
+++ b/configs/gen_data_in_env.cfg
@@ -1,5 +1,5 @@
 --dataset AmassDiscreteDataset
---data-paths ./data/amass_processed
+--data-paths /orion/u/bxpan/exoskeleton/humor/data/amass_processed
 --split-by dataset
 --sample-num-frames 10
 --data-steps-in 1
