saved humor rollout in a file per-subsequence (for unknown reasons, some scenes get saved double the number of rollouts. possibly due to last batch not full?)

--- a/configs/rollout_gimo.cfg
+++ b/configs/rollout_gimo.cfg
@@ -1,5 +1,6 @@
 --dataset GimoDiscreteDataset
 --data-paths /scr/bxpan/gimo_processed
+--orig-data-root /scr/bxpan/gaze_dataset
 #--data-paths /orion/u/bxpan/exoskeleton/humor/data/amass_processed
 --splits-path ./rollout_humor_scripts/all_scenes_stride_1
 --sample-num-frames 1
@@ -29,3 +30,8 @@
 --eval-sampling-len 5.0
 --eval-num-samples 1
 --shuffle-test
+
+--rollout-times 10
+--split train
+--worker-id 0
+--num-workers 4
