--- a/configs/rollout_gimo.cfg
+++ b/configs/rollout_gimo.cfg
@@ -31,7 +31,7 @@
 --eval-num-samples 1
 --shuffle-test
 
---rollout-times 10
---split train
+--rollout-times 100
+--split test
 --worker-id 0
 --num-workers 4
