updated humor for high-fps prediction setting

--- a/configs/rollout_gimo.cfg
+++ b/configs/rollout_gimo.cfg
@@ -2,7 +2,7 @@
 --data-paths /scr/bxpan/gimo_processed
 --orig-data-root /scr/bxpan/gaze_dataset
 #--data-paths /orion/u/bxpan/exoskeleton/humor/data/amass_processed
---splits-path ./rollout_humor_scripts/all_scenes_stride_1
+--splits-path ./rollout_humor_scripts/all_scenes_stride_1_hist_1_future_60
 --sample-num-frames 1
 --data-steps-in 1
 --data-steps-out 1
@@ -24,14 +24,14 @@
 --out /scr/bxpan/HumorGIMORollouts
 --ckpt ./checkpoints/humor_qual/best_model.pth
 --gpu 0
---batch-size 2048
+--batch-size 1024
 
 --eval-sampling
---eval-sampling-len 5.0
+--eval-sampling-len 2.0
 --eval-num-samples 1
 --shuffle-test
 
 --rollout-times 100
---split test
+--split train
 --worker-id 0
 --num-workers 4
