--- a/configs/fit_gimo_keypts.cfg
+++ b/configs/fit_gimo_keypts.cfg
@@ -9,11 +9,13 @@
 --vposer ../vposer_v1_0/
 --init-motion-prior ./checkpoints/init_state_prior_gmm
 --humor ./checkpoints/humor/best_model.pth
---out ./out/gimo_verts_upper_fitting
+#--out ./out/gimo_verts_upper_fitting
+--out ./out/gimo_verts_upper_fitting_2
 
 --amass-split-by dataset
 --shuffle
---amass-batch-size 1024
+#--amass-batch-size 1024
+--amass-batch-size 2
 --amass-seq-len 2
 --amass-use-verts
 --amass-use-points
