change to save all optim results instead of only the motion latents

--- a/configs/fit_gimo_keypts.cfg
+++ b/configs/fit_gimo_keypts.cfg
@@ -1,6 +1,7 @@
 --data-path /scr/bxpan/gimo_processed_new
 --orig-data-root /scr/bxpan/gaze_dataset
 --splits-path ./rollout_humor_scripts/all_scenes_stride_1_hist_1_future_60_latents
+--split test
 --data-type GIMO
 --data-fps 30
 
@@ -8,7 +9,6 @@
 --vposer ../vposer_v1_0/
 --init-motion-prior ./checkpoints/init_state_prior_gmm
 --humor ./checkpoints/humor/best_model.pth
-#--out ./out/gimo_verts_upper_fitting
 --out ./out/gimo_verts_upper_fitting
 
 --amass-split-by dataset
