fixed minor things for humor and humor-walking retraining

--- a/configs/test_humor_qual_sampling.cfg
+++ b/configs/test_humor_qual_sampling.cfg
@@ -1,5 +1,5 @@
 --dataset AmassDiscreteDataset
---data-paths /scr-ssd/bxpan/gimo_processed
+--data-paths /scr/bxpan/amass_walking
 --split-by dataset
 --sample-num-frames 10
 --data-steps-in 1
@@ -7,7 +7,7 @@
 --data-rot-rep mat
 --data-return-config smpl+joints+contacts
 
---model HumorModel
+--model MotionvaeModel
 --model-data-config smpl+joints+contacts
 --in-rot-rep mat
 --out-rot-rep aa
@@ -16,10 +16,10 @@
 
 --model-use-smpl-joint-inputs
 
---loss HumorLoss
+--loss MotionvaeLoss
 
---out ./out/humor_qual_test_sampling
---ckpt ./out/humor_qual_train_gimo/checkpoints/best_model.pth
+--out ./out/humor_qual_walking_retrain
+--ckpt ./out/humor_qual_walking_retrain/checkpoints/best_model.pth
 --gpu 0
 --batch-size 1
 
