changes for training the public humor model & Yi's humor model (changed to absolute prediction) on AMASS walking motions

--- a/configs/train_yi_humor_walking.cfg
+++ b/configs/train_yi_humor_walking.cfg
@@ -14,12 +14,10 @@
 --out-rot-rep aa
 --latent-size 48
 --model-steps-in 1
---model-steps-out 1
 
 --model-use-smpl-joint-inputs
---model-smpl-batch-size 400
 
---loss MotionvaeLoss
+--loss HumorLoss 
 --kl-loss 0.0004
 --kl-loss-anneal-start 0
 --kl-loss-anneal-end 50
@@ -42,9 +40,7 @@
 --smpl-mesh-loss 1.0
 --smpl-joint-consistency-loss 1.0
 
---smpl-batch-size 4000
-
---out ./out/humor_qual_walking_retrain
+--out ./out/yi_humor_absolute_qual_walking
 --gpu 0
 --batch-size 400
 --epochs 400
