--- a/configs/test_humor_qual_sampling.cfg
+++ b/configs/test_humor_qual_sampling.cfg
@@ -6,8 +6,10 @@
 --data-steps-out 1
 --data-rot-rep mat
 --data-return-config smpl+joints+contacts
+--data-noise-std 0.0
 
---model MotionvaeModel
+#--model HumorModel
+--model YiHumorModel
 --model-data-config smpl+joints+contacts
 --in-rot-rep mat
 --out-rot-rep aa
@@ -16,10 +18,12 @@
 
 --model-use-smpl-joint-inputs
 
---loss MotionvaeLoss
+--loss HumorLoss 
 
---out ./out/humor_qual_walking_retrain
---ckpt ./out/humor_qual_walking_retrain/checkpoints/best_model.pth
+# --out ./out/public_humor_qual_walking
+# --ckpt ./out/public_humor_qual_walking/checkpoints/best_model.pth
+--out ./out/yi_humor_absolute_qual_walking
+--ckpt ./out/yi_humor_absolute_qual_walking/checkpoints/best_model.pth
 --gpu 0
 --batch-size 1
 
