added a few configs

--- a/configs/train_yi_humor.cfg
+++ b/configs/train_yi_humor.cfg
@@ -1,30 +1,28 @@
 --dataset AmassDiscreteDataset
---data-paths /scr/bxpan/amass_walking
+--data-paths /scr/bxpan/amass_processed
 --split-by dataset
 --sample-num-frames 10
 --data-steps-in 1
 --data-steps-out 1
 --data-rot-rep mat
 --data-return-config smpl+joints+contacts
---data-noise-std 0.0
 
---model HumorModel 
+--model YiHumorModel
 --model-data-config smpl+joints+contacts
 --in-rot-rep mat
 --out-rot-rep aa
 --latent-size 48
 --model-steps-in 1
 
---model-use-smpl-joint-inputs
+#--ckpt ./out/humor_train_kl_8e-4/checkpoints/best_model.pth
 
---loss HumorLoss 
+--loss HumorLoss
 --kl-loss 0.0004
 --kl-loss-anneal-start 0
 --kl-loss-anneal-end 50
 
 --contacts-loss 0.01
-
---ckpt ./out/public_humor_qual_walking_small_bs/checkpoints/best_model.pth
+--contacts-vel-loss 0.01
 
 --regr-trans-loss 1.0
 --regr-trans-vel-loss 1.0
@@ -42,9 +40,9 @@
 --smpl-mesh-loss 1.0
 --smpl-joint-consistency-loss 1.0
 
---out ./out/public_humor_qual_walking_small_bs
+--out ./out/yi_humor_4e-4_all_losses
 --gpu 0
---batch-size 200
+--batch-size 400
 --epochs 400
 --lr 1e-4
 --sched-milestones 50 80 140
