--- a/configs/test_humor_qual_sampling.cfg
+++ b/configs/test_humor_qual_sampling.cfg
@@ -1,5 +1,6 @@
 --dataset AmassDiscreteDataset
---data-paths /scr/bxpan/amass_walking
+#--data-paths /scr/bxpan/amass_walking
+--data-paths /scr/bxpan/amass_processed
 --split-by dataset
 --sample-num-frames 10
 --data-steps-in 1
@@ -8,8 +9,8 @@
 --data-return-config smpl+joints+contacts
 --data-noise-std 0.0
 
-#--model HumorModel
---model YiHumorModel
+--model HumorModel
+#--model YiHumorModel
 --model-data-config smpl+joints+contacts
 --in-rot-rep mat
 --out-rot-rep aa
@@ -20,10 +21,17 @@
 
 --loss HumorLoss 
 
-# --out ./out/public_humor_qual_walking
-# --ckpt ./out/public_humor_qual_walking/checkpoints/best_model.pth
---out ./out/yi_humor_absolute_qual_walking
---ckpt ./out/yi_humor_absolute_qual_walking/checkpoints/best_model.pth
+#--out ./out/yi_humor_4e-4_all_losses/
+#--ckpt ./out/yi_humor_4e-4_all_losses/checkpoints/best_model.pth
+--out ./out/humor_qual_walking_long/
+--ckpt ./out/humor_qual_walking_long/checkpoints/best_model.pth
+
+#--out ./out/exoskeleton_walking_best
+#--ckpt /orion/u/bxpan/exoskeleton/humor/checkpoints/best_model_walking.pth
+#--out ./out/public_humor_qual_walking_small_bs
+#--ckpt ./out/public_humor_qual_walking_small_bs/checkpoints/best_model.pth
+#--out ./out/yi_humor_absolute_qual_walking
+#--ckpt ./out/yi_humor_absolute_qual_walking/checkpoints/best_model.pth
 --gpu 0
 --batch-size 1
 
@@ -31,3 +39,5 @@
 --eval-sampling-len 10.0
 --eval-num-samples 1
 --shuffle-test
+
+#--test-on-train
