added changes to several configs

--- a/configs/test_humor_qual_sampling.cfg
+++ b/configs/test_humor_qual_sampling.cfg
@@ -1,17 +1,17 @@
 --dataset AmassDiscreteDataset
-#--data-paths /scr/bxpan/amass_walking
---data-paths /scr/bxpan/amass_processed
+--data-paths /scr/bxpan/amass_walking
+#--data-paths /scr/bxpan/amass_processed
 --split-by dataset
 --sample-num-frames 10
 --data-steps-in 1
 --data-steps-out 1
 --data-rot-rep mat
---data-return-config smpl+joints+contacts
+--data-return-config smpl+joints
 --data-noise-std 0.0
 
---model HumorModel
-#--model YiHumorModel
---model-data-config smpl+joints+contacts
+#--model HumorModel
+--model YiHumorModel
+--model-data-config smpl+joints
 --in-rot-rep mat
 --out-rot-rep aa
 --latent-size 48
@@ -21,10 +21,16 @@
 
 --loss HumorLoss 
 
+#--out ./out/yi_humor_qual_walking_long/
+#--ckpt ./out/yi_humor_qual_walking_long/checkpoints/best_train_model.pth
 #--out ./out/yi_humor_4e-4_all_losses/
-#--ckpt ./out/yi_humor_4e-4_all_losses/checkpoints/best_model.pth
---out ./out/humor_qual_walking_long/
---ckpt ./out/humor_qual_walking_long/checkpoints/best_model.pth
+#--ckpt ./out/yi_humor_4e-4_all_losses/checkpoints/best_train_model.pth
+#--out ./out/yi_humor_qual_walking_long_no_reg_loss_no_kl_no_contact/
+#--ckpt ./out/yi_humor_qual_walking_long_no_reg_loss_no_kl_no_contact/checkpoints/best_train_model.pth
+--out ./out/yi_humor_qual_walking_long_no_reg_loss_no_kl_no_contact_all_abs/
+--ckpt ./out/yi_humor_qual_walking_long_no_reg_loss_no_kl_no_contact_all_abs/checkpoints/best_train_model.pth
+#--out ./out/humor_qual_walking_long/
+#--ckpt ./out/humor_qual_walking_long/checkpoints/best_model.pth
 
 #--out ./out/exoskeleton_walking_best
 #--ckpt /orion/u/bxpan/exoskeleton/humor/checkpoints/best_model_walking.pth
@@ -35,9 +41,11 @@
 --gpu 0
 --batch-size 1
 
---eval-sampling
---eval-sampling-len 10.0
---eval-num-samples 1
---shuffle-test
+#--eval-sampling
+#--eval-sampling-len 10.0
+#--eval-num-samples 1
+#--shuffle-test
 
-#--test-on-train
+--eval-recon
+
+--test-on-train
