--- a/configs/train_humor_qual_walking_long.cfg
+++ b/configs/train_humor_qual_walking_long.cfg
@@ -11,7 +11,7 @@
 --ckpt ./out/humor_qual_walking_long/checkpoints/best_model.pth
 
 --model HumorModel 
---model-data-config smpl+joints+contacts
+--model-data-config yi 
 --in-rot-rep mat
 --out-rot-rep aa
 --latent-size 48
