--- a/configs/train_yi_humor.cfg
+++ b/configs/train_yi_humor.cfg
@@ -1,11 +1,12 @@
 --dataset AmassDiscreteDataset
---data-paths /scr/bxpan/amass_processed
+--data-paths /scr/bxpan/amass_walking
 --split-by dataset
 --sample-num-frames 10
 --data-steps-in 1
 --data-steps-out 1
 --data-rot-rep mat
 --data-return-config smpl+joints+contacts
+--data-noise-std 0.0
 
 --model YiHumorModel
 --model-data-config smpl+joints+contacts
@@ -16,8 +17,10 @@
 
 #--ckpt ./out/humor_train_kl_8e-4/checkpoints/best_model.pth
 
---loss HumorLoss
---kl-loss 0.0004
+#--loss HumorLoss
+--loss YiHumorLoss
+#--kl-loss 0.0004
+--kl-loss 0
 --kl-loss-anneal-start 0
 --kl-loss-anneal-end 50
 
