--- a/configs/train_yi_humor_qual.cfg
+++ b/configs/train_yi_humor_qual.cfg
@@ -1,15 +1,16 @@
 --dataset AmassDiscreteDataset
+#--dataset AmassYiDataset
 --data-paths /scr/bxpan/amass_walking
 --split-by dataset
 --sample-num-frames 10
 --data-steps-in 1
 --data-steps-out 1
 --data-rot-rep mat
---data-return-config smpl+joints+contacts
+--data-return-config smpl+joints
 --data-noise-std 0.0
 
 --model YiHumorModel
---model-data-config smpl+joints+contacts
+--model-data-config smpl+joints
 --in-rot-rep mat
 --out-rot-rep aa
 --latent-size 48
@@ -19,7 +20,7 @@
 
 --model-use-smpl-joint-inputs
 
---loss HumorLoss
+--loss YiHumorLoss
 --kl-loss 0.0004
 --kl-loss-anneal-start 0
 --kl-loss-anneal-end 150
@@ -42,7 +43,7 @@
 --smpl-mesh-loss 1.0
 --smpl-joint-consistency-loss 1.0
 
---out ./out/yi_humor_qual_walking_long
+--out ./out/yi_humor_qual_walking_long_no_reg_loss_kl_1e-4_no_contact
 --gpu 0
 --batch-size 200
 --epochs 600
